<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/menuBack"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/menu_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/menu_title" />

    <LinearLayout
        android:id="@+id/telephone_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/teleicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"			android:src="@drawable/telephone_icon" />
        
        <TextView
            android:id="@+id/teletext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/menu_telelist"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/font_balck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/battery_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/bateicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/battery_icon" />
        
        <TextView
            android:id="@+id/batetext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/menu_battery"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/font_balck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/camera_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <ImageView
            android:id="@+id/cameicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/camera_icon" />
        
        <TextView
            android:id="@+id/cametext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/menu_camera"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/font_balck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/soft_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <ImageView
            android:id="@+id/softicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/soft_icon" />
        
        <TextView
            android:id="@+id/softtext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/menu_soft"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/font_balck" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/quick_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <ImageView
            android:id="@+id/quickicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/quick_icon" />




        <TextView
            android:id="@+id/quicktext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/menu_quick"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/font_balck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/hard_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <ImageView
            android:id="@+id/hardicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hard_icon" />
        
        <TextView
            android:id="@+id/hardtext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/menu_hard"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/font_balck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/clock_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <ImageView
            android:id="@+id/clockicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clock_icon" />
        
        <TextView
            android:id="@+id/clocktext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/menu_clock"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/font_balck" />

    </LinearLayout>

</LinearLayout>