<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:id="@+id/ll"
    >

    <ImageView
        android:id="@+id/battery_lv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
     	android:layout_alignParentTop="true"
     	android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/battery_lv"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_power"
            android:textSize="20dp"
            android:textColor="#000000"/>
         <TextView
             android:id="@+id/power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
             />
        
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/battery_lv"
        android:layout_marginTop="20dp" >

        <TextView
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_states" />
         <TextView
             android:id="@+id/states"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            />
        
    </LinearLayout>
     <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout2"
        android:layout_marginTop="20dp" >

        <TextView
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_temp" />
         <TextView
             android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            />
         </LinearLayout>
         <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout3"
        android:layout_marginTop="20dp" >

        <TextView
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vol" />
         <TextView
             android:id="@+id/vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
             />
        
    </LinearLayout>
     <LinearLayout
        android:id="@+id/layout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout5"
        android:layout_marginTop="20dp" >

        <TextView
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_use_states" />
         <TextView
             android:id="@+id/use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
           />
        
    </LinearLayout>

</RelativeLayout>